homework_lesson_8_pack_json_updates

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "cypress": "^13.3.2"
   },
+  "type": "module",
   "name": "qa-automation-course",
   "description": "QA automation course",
   "version": "1.0.0",
