--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "description": "QA automation course",
   "version": "1.0.0",
   "main": "lesson_4_js_basics.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/oleksandr-vysotskyi/QA-Automation-Course/issues"
   },
-  "homepage": "https://github.com/oleksandr-vysotskyi/QA-Automation-Course#readme"
+  "homepage": "https://github.com/oleksandr-vysotskyi/QA-Automation-Course#readme",
+  "dependencies": {
+    "node-fetch": "^3.3.2"
+  }
 }
